# Kalman_Filter

./: CMakeLists.txt  Makefile  README.md  kalmanfilter.h
Advanced/: Matrix.hpp  Matrix.inc  kalmanfilter.cpp  kalmanfilter.h  kalmanfilter_test.cpp  main  main.cpp
Simple/: kalmanfilter.cpp  kalmanfilter_test.cpp  main  main.cpp
